--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="icon" type="image/png" href="img/techis-logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -13,7 +14,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
-        <!-- container, ajust the width for each device. -->
+        <!-- container, adjust the width for each device. -->
         <div class="container">
             <!-- navbar-brand, for your company, product, or project name. -->
             <a class="navbar-brand title-icon" href="#"><span class="font-primary">P</span>ortfolio</a>
@@ -40,7 +41,21 @@
         </div>
     </nav>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <div id="about">
+        <h2><span class="font-primary">A</span>bout</h2>
+        <img src="img/sample-woman.jpg">
+        <div class="name">Olivia Johnson</div>
+        <div class="vocation">Web Application Developer</div>
+        <div class="skills">HTML / CSS / JavaScript / React.js / Redux / Python / Django / Express.js / AWS(Basics) / Docker (Basics)</div>
+        <p>
+            An SPA That displayes subreddit data from Reddit for a spcified time period. As the front-end developer, I worked
+        </p>
+        <div class="email">example@techis.io</div>
+        <div class="icons">
+            <a href="#"><i class="bi bi-github"></i></a>
+            <a href="#"><i class="bi bi-linkedin ms-3"></i></a>
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
 
 </html>
