--- a/index.html
+++ b/index.html
@@ -54,8 +54,58 @@
         <div class="icons">
             <a href="#"><i class="bi bi-github"></i></a>
             <a href="#"><i class="bi bi-linkedin ms-3"></i></a>
+        </div>
+    </div>
 
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <div id="project">
+        <h2><span class="font-primary">P</span>roject</h2>
+
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="img/project-twitter.png" alt="Twitter Project">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Twitter Clone </h5>
+                        <p class="card-text">This is a twitter based project made using Django</p>
+                        <p class="card-text"><small class="text-muted">
+                            Test Login Account <br>
+                            Email : test@gmail.com <br>
+                            Password : 1234
+                        </small></p>
+                        <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
+                        <a href="#" target="_blank" class="btn btn-secondary">Github Link</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="img/project-netflix.png" alt="Netflix Project">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Netflix Clone </h5>
+                        <p class="card-text">This is a Netflix based project using HTML / CSS / JS</p>
+                        <p class="card-text"><small class="text-muted">
+                            Test Login Account <br>
+                            Email : test@gmail.com <br>
+                            Password : 1234
+                        </small></p>
+                        <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
+                        <a href="#" target="_blank" class="btn btn-secondary">Github Link</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
 
 </html>
